# ckb-vm-contrib

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: benchmark.yml  ckb-mock-tx-types.yml  ckb-vm-bench-scripts.yml  ckb-vm-bench.yml  ckb-vm-differential-test.yml  ckb-vm-fuzzing-utils.yml  ckb-vm-syscall-tracer.yml  ckb-vm-test-suite.yml  ckb-x64-simulator.yml  protobuf-ckb-syscalls.yml  release-ckb-mock-tx-types.yml  release-ckb-vm-fuzzing-utils.yml  release-ckb-vm-syscall-tracer.yml  release-ckb-x64-simulator.yml  release-spike-sys.yml  (+2 more)
benchmarks/: collect_results.py
ckb-mock-tx-types/: Cargo.toml
ckb-mock-tx-types/src/: lib.rs
ckb-script-size-analyzer/: Cargo.toml  README.md
ckb-vm-bench/: Cargo.toml  README.md
ckb-vm-bench-scripts/: Makefile
ckb-vm-bench-scripts/contracts/ed25519/: Cargo.toml
ckb-vm-bench-scripts/contracts/ed25519/src/: ed25519.rs  ed25519_ckbvm.rs  ed25519_native.rs  lib.rs
ckb-vm-bench-scripts/contracts/k256_schnorr/: Cargo.toml
ckb-vm-bench-scripts/contracts/k256_schnorr/src/: k256_schnorr.rs  k256_schnorr_ckbvm.rs  k256_schnorr_native.rs
ckb-vm-bench-scripts/contracts/p256/: Cargo.toml
ckb-vm-bench-scripts/contracts/p256/src/: p256.rs  p256_ckbvm.rs  p256_native.rs
ckb-vm-bench/benches/: algorithm.rs
ckb-vm-differential/: Cargo.toml
ckb-vm-differential-guest/: Cargo.toml
ckb-vm-differential-guest/src/: lib.rs
ckb-vm-differential-host/: Cargo.toml
ckb-vm-differential-host/src/: executor.rs  guest_build.rs  lib.rs
ckb-vm-differential-protocol/: Cargo.toml
ckb-vm-differential-test/: Cargo.toml  README.md
ckb-vm-differential-test/src/: executor.rs  guest.rs  guest_build.rs  lib.rs  protocol.rs
ckb-vm-differential/src/: lib.rs
ckb-vm-fuzzing-utils/: Cargo.toml  README.md
ckb-vm-fuzzing-utils/src/: lib.rs
ckb-vm-syscall-tracer/: Cargo.toml  README.md  build.rs
ckb-vm-test-suite/: .gitignore  Cargo.toml  Makefile  README.md  artifact.sh  rv64im-benchmark.sh  test.sh
ckb-vm-test-suite/benches/: algorithm.rs
ckb-vm-test-suite/ckb-vm-arch-test/: Makefile
ckb-vm-test-suite/ckb-vm-arch-test/riscv-target/ckb-vm/: model_test.h
ckb-vm-test-suite/ckb-vm-arch-test/riscv-target/ckb-vm/device/rv64i_m/: Makefile.include
ckb-vm-test-suite/ckb-vm-arch-test/riscv-test-suite/rv64i_m/B/: Makefile  Makefrag
ckb-vm-test-suite/programs/: .gitignore  Cargo.toml  Makefile
ckb-vm-test-suite/programs/contracts/ed25519/src/: ed25519.rs  ed25519_ckbvm.rs
ckb-vm-test-suite/programs/contracts/k256_ecdsa/: Cargo.toml  Makefile
ckb-vm-test-suite/programs/contracts/k256_ecdsa_sp1/: Cargo.toml  README.md
ckb-vm-test-suite/programs/contracts/k256_ecdsa_sp1/src/: main.rs
ckb-vm-test-suite/programs/contracts/k256_schnorr/src/: k256_schnorr_ckbvm.rs  k256_schnorr_native.rs
ckb-vm-test-suite/programs/contracts/p256/src/: p256_ckbvm.rs  p256_native.rs
ckb-vm-test-suite/programs/contracts/rsa/src/: rsa.rs
ckb-vm-test-suite/programs/contracts/secp256k1_ecdsa/: .gitignore  Makefile
ckb-vm-test-suite/programs/contracts/secp256k1_schnorr/: Makefile  secp256k1_schnorr.c
ckb-vm-test-suite/programs/contracts/sha256_differential/: Cargo.toml
ckb-vm-test-suite/programs/contracts/sha256_differential/src/: lib.rs
ckb-vm-test-suite/programs/contracts/sha256_differential/tests/: proptest.rs
ckb-vm-test-suite/programs/contracts/sphincsplus_ref/: .gitignore  Makefile  README.md
ckb-vm-test-suite/programs/scripts/: add_note_section.sh
ckb-vm-test-suite/programs/tests/src/: tests.rs
ckb-vm-test-suite/src/: lib.rs  snapshot2_help.rs
ckb-vm-test-suite/tests/: rv64im.rs  snapshot2.rs
ckb-x64-simulator/: Cargo.toml
ckb-x64-simulator/src/: global_data.rs  lib.rs  simulator_context.rs  spawn.rs  utils.rs
ckb-x64-simulator/tests/: Makefile
ckb-x64-simulator/tests/contracts/exec-child/: Cargo.toml
ckb-x64-simulator/tests/contracts/exec-parent/: Makefile
ckb-x64-simulator/tests/contracts/exec-parent/src/: main.rs
ckb-x64-simulator/tests/libs/ckb-std-wrapper/: Cargo.toml
data/: 2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  (+17 more)
opt-lib/: README.md
opt-lib/blake2b/rust/: Cargo.toml  README.md  build.rs
opt-lib/blake2b/rust/examples/: blake2.rs  blake2_merkletree.rs  blake2ya_bigdate.rs  blake2ya_merkletree.rs  ckb_opt_blake2b.rs  ckb_opt_blake2b_merkletree.rs
opt-lib/blake2b/rust/src/: blake2-impl.h  blake2b-ref.c  lib.rs
opt-lib/blake2b/rust/tests/: test_blake2b.rs
opt-lib/fips202/rust/: Cargo.toml  README.md  build.rs
opt-lib/fips202/rust/benches/: bench_shake256.rs
opt-lib/fips202/rust/examples/: ckb_opt_fips202_sha3_256.rs  ckb_opt_fips202_sha3_512.rs  ckb_opt_fips202_shake128.rs  ckb_opt_fips202_shake256.rs  sha3_256.rs  sha3_512.rs  sha3_shake128.rs  sha3_shake256.rs
opt-lib/fips202/rust/src/: fips202.c  fips202.h  lib.rs
opt-lib/fips202/rust/tests/: test_shake256.rs
opt-lib/fips202/test/: Cargo.toml
opt-lib/fips202/test/src/: lib.rs
opt-lib/fips202/test/tests/: proptest.rs
opt-lib/sha256/rust/: Cargo.toml  README.md  build.rs
opt-lib/sha256/rust/src/: lib.rs  sha256.h
opt-lib/sha256/rust/tests/: test_sha256.rs
opt-lib/sha512/rust/: Cargo.toml  README.md  build.rs
opt-lib/sha512/rust/src/: lib.rs  sha512.c
opt-lib/sha512/rust/tests/: test_sha512.rs
protobuf-ckb-syscalls/: Cargo.toml  README.md  build.rs  traces.proto
protobuf-ckb-syscalls/src/: lib.rs
spike-sys/: Cargo.toml  README.md  build.rs  build.sh
(+86 files in other folders)
