[workspace]
resolver = "2"
members = [
  "ckb-mock-tx-types",
  "ckb-script-size-analyzer",
  "ckb-vm-test-suite",
  "ckb-x64-simulator",
  "ckb-vm-syscall-tracer",
]
exclude = ["deps/ckb-vm"]

[workspace.package]
version = "0.202.0"
license = "MIT"
edition = "2024"
authors = ["Nervos Core Dev <dev@nervos.org>"]

[workspace.dependencies]
# CKB dependencies
ckb-jsonrpc-types = "=0.202.0"
ckb-traits = "=0.202.0"
ckb-types = "=0.202.0"
ckb-vm = "=0.24.14"
ckb-chain-spec = "=0.202.0"
ckb-script = "=0.202.0"
ckb-std = "0.18.0"

# Crates defined in current workspace
ckb-mock-tx-types = { path = "ckb-mock-tx-types", version = "0.202.0" }
ckb-x64-simulator = { path = "ckb-x64-simulator", version = "0.202.0" }
spike-sys = { path = "spike-sys", version = "0.202.0" }

# Other common crates
clap = "4.5.40"
criterion = "0.5.1"
object = "0.37.1"
rand = "0.9"
rustc-demangle = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
hex = "0.4"
once_cell = "1.13.0"
prost = "0.14.1"
prost-build = "0.14.1"
prost-reflect = "0.16.0"
prost-reflect-build = "0.16.0"
int-enum = "1.2.0"
regex = { version = "1.11.1", default-features = false }