[package]
name = "ckb-opt-fips202"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Optimized FIPS202 (SHAKE256) implementation for CKB-VM with Rust bindings"
repository = "https://github.com/nervosnetwork/ckb-vm-contrib"
keywords = ["fips202", "shake256", "ckb", "risc-v", "cryptography"]
categories = ["cryptography", "no-std"]

[workspace]

[lib]
name = "ckb_opt_fips202"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
sha3 = { version = "0.11", default-features = false }
