[package]
name = "fips202_differential"
version = "0.1.0"
edition = "2024"

[workspace]

[features]
default = []
__guest = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "fips202_differential"
path = "src/lib.rs"
required-features = ["__guest"]

[[test]]
name = "proptest"
path = "tests/proptest.rs"

[dependencies]
ckb-vm-differential-test = { path = "../../../ckb-vm-differential-test", version = "1.1.1" }

[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
sha3 = "0.11"
proptest = "1.5"

[target.'cfg(target_arch = "riscv64")'.dependencies]
ckb-opt-fips202 = { path = "../rust", version = "0.1.6" }
