[package]
name = "ckb-opt-sha256"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Optimized SHA-256 implementation for CKB-VM with Rust bindings"
repository = "https://github.com/nervosnetwork/ckb-vm-contrib"
keywords = ["sha256", "ckb", "risc-v", "cryptography"]
categories = ["cryptography", "no-std"]

[workspace]

[lib]
name = "ckb_opt_sha256"

[build-dependencies]
cc = "1.0"
